# lap-project-template

./: .gitignore  CLAUDE.md  INITIAL.md  README.md  pyproject.toml
.claude/commands/: generate-prp.md
docs/: LAP_SYNTAX_GUIDE.md  SETTING_UP_LAP_PROJECT.md  TEMPLATE_USAGE_GUIDE.md  WORKFLOW_DEVELOPMENT_GUIDE.md
examples/chase/config/: rs.simplified.cfg  validation.back2future.cfg  validation.cfg
examples/chase/meta-sanity/: rs.meta.yaml  validation.back2future.meta.yaml  validation.meta.yaml
examples/jason/config/: results.cfg
examples/starters/: starter.cfg  starter.meta.yaml
src/modules/: __init__.py  file_utils.py
src/workflows/: analysis_workflow.py  result_workflow.py
