[project]
name = "lap-pipeline-template"
version = "0.1.0"
description = "Template for LAP (Lightweight Analysis Pipeline) projects with workflow-based architecture"
readme = "README.md"
requires-python = ">=3.9"
packages = []
dependencies = [
    # Meta-sanity for LAP meta file management (REQUIRED)
    "meta-sanity",
    # Lap Notebook for LAP notebook development
    "lap-notebook",

    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ipython>=8.18.1",
]

[dependency-groups]
# Optional dependencies for advanced features
plotting = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

statistics = [
    "scipy>=1.7.0",
    "statsmodels>=0.12.0",
]

parallel = [
    "joblib>=1.0.0",
]

config = [
    "pyyaml>=5.4.0",
]

progress = [
    "tqdm>=4.60.0",
]

notebook = [
    "lap-notebook",
]

# Development dependencies
dev = [
    "pytest>=6.0.0",
    "ruff>=0.14.1",
    "mypy>=1.18.2",
]

# All optional dependencies combined
all = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "statsmodels>=0.12.0",
    "joblib>=1.1.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.60.0",
]

[tool.uv.sources]
lap-notebook = { git = "https://github.com/yakaboskic/lap-notebook.git" }
meta-sanity = { git = "https://github.com/yakaboskic/meta-sanity.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
